Call DevTools APIs from DocumentThreadableLoader with ExecutionContext

Bug: 753790
Change-Id: Ie998213f27fe16c0bff46ba0aca0623d8e5c1367
Reviewed-on: https://chromium-review.googlesource.com/618073
Reviewed-by: Takeshi Yoshino <tyoshino@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Commit-Queue: Tsuyoshi Horo <horo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#495357}
Former-commit-id: 2cf18136b13f1413316ce06bb86b0c9de95bade0