third_party/WebKit/Source/core/inspector/InspectorNetworkAgent.cpp
@@ -862,7 +862,6 @@ void InspectorNetworkAgent::DidFinishLoading(unsigned long identifier,
 }
 
 void InspectorNetworkAgent::DidReceiveCORSRedirectResponse(
-    LocalFrame* frame,
     unsigned long identifier,
     DocumentLoader* loader,
     const ResourceResponse& response,
