third_party/WebKit/LayoutTests/http/tests/inspector/network/resources/fetch-parallel-worker.js
@@ -1,0 +1,10 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+self.onmessage = (event) => {
+    Promise.all(
+        event.data.map(url => {
+            return fetch(url).then((res) => res.text());
+        }))
+        .then(results => {
+            self.postMessage(results);
+        });
+};
